--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
 			var renderer = new THREE.WebGLRenderer();
 			renderer.setSize( canvasWidth, canvasHeight );
 			document.getElementById('canvasContainer').appendChild( renderer.domElement ).setAttribute( 'id', 'editWindow' );
+			
+			drawLine( 0, magicNumber, 0, -magicNumber );
+			addPoint(1.56, 172.12); 
+			addPoint(19.76, 171.08); 
+			addPoint(22.36, 148.72); 
+			addPoint(11.440000000000001, 134.68); 
+			addPoint(10.4, 104); 
+			addPoint(10.4, 82.16); 
+			addPoint(42.64, 68.64); 
+			addPoint(62.400000000000006, 57.2); 
+			addPoint(59.800000000000004, 43.68); 
+			addPoint(36.4, 43.68); 
+			addPoint(13, 43.68); 
+			addPoint(1.04, 43.68); 
 			renderer.render(scene, camera);
 
 			// Set up preview window
@@ -54,10 +68,29 @@
 			previewWindow.setSize( previewWidth, previewHeight );
 
 			document.getElementById('canvasContainer').appendChild( previewWindow.domElement ).setAttribute( 'id', 'previewWindow' );
-			renderer.render( previewScene, previewCamera );
+			previewWindow.render( previewScene, previewCamera );
+
+
+			function drawLine( x1, y1, x2, y2 ) {
+				var path = new THREE.Geometry();
+
+				path.vertices.push(new THREE.Vector3( x1, y1, 0));
+				path.vertices.push(new THREE.Vector3( x2, y2, 0));
+
+				var lineMaterial = new THREE.LineBasicMaterial();
+				lineMaterial.color = 0x000000;
+				lineMaterial.linewidth = 1;
+				var line = new THREE.Line( path, lineMaterial );
+				scene.add( line );
+				renderer.render(scene, camera);
+
+			}
 
 
 			function addPoint( x, y ) {
+
+				// console.log("addPoint(" + x + ', ' + y + ');');
+
 				var sphere = new THREE.Mesh(
 					new THREE.SphereGeometry(5, 10, 10), 
 					new THREE.MeshNormalMaterial()
@@ -79,9 +112,8 @@
 					e.preventDefault();
 					var path = new THREE.Geometry();
 					$.each( pointArray, function(i,p) {
-						path.vertices.push( new THREE.Vector3( p[0], p[1], 0 ) );
+						path.vertices.push( new THREE.Vector3( 0, p[0], p[1] ) );
 					});
-					console.log( path );
 
 
 					// THREE.LatheGeometry( path.vertices, 20, 0, 2 * Math.PI );
@@ -93,9 +125,12 @@
 						new THREE.MeshLambertMaterial( { color: 0x2D303D, wireframe: true, shading: THREE.FlatShading } ));
 
 					previewScene.add( previewMesh );
+					previewMesh.rotation.x = 300;
+					// previewMesh.rotation.y = 600;
 					previewWindow.render( previewScene, previewCamera);
 
 				});
+				$('#lathe').click();
 
 				$('#editWindow').on('click', function(e) {
 
@@ -147,17 +182,13 @@
 
 			    $('#previewWindow').mousedown(function(e) {
 
-			    	console.log('Mooooo');
 			        
 			        if ( e.target.tagName != 'CANVAS' )
 			            return;
 
-			        console.log('COW');
 
 			        if ( previewMesh == null )
 			        	return;
-
-			        console.log('by the horns');
 
 			        mouseDown = true;
 			        mouseDownX = e.pageX;
@@ -169,17 +200,14 @@
 			    }).mouseup(function(e) {
 
 			        mouseDown = false;
-			        console.log('dont scare the cows');
 
 			    }).mousemove(function(e) {
 			        if ( mouseDown ) {
 
-			        	console.log('Moving mouse');
 
 			            rotateY = ( e.pageX - mouseDownX ) * 0.02;
 			            rotateX = ( e.pageY - mouseDownY ) * 0.02;
 
-			            console.log( rotateX, rotateY );
 
 			            previewMesh.rotation.x = rotationXMouseDown - rotateX;
 			            previewMesh.rotation.y = rotationYMouseDown - rotateY;
