added in script tag for celshader

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
+		<script src="THREEx.CelShader.js"></script>
 		<script>
 			var canvasWidth = 800,
 				canvasHeight = 800,
