refactoring, still WIP

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
 		<script src="THREEx.CelShader.js"></script>
 		<script src="FileSaver.js"></script>
+		<!--<script src="ZLathe.js"></script>-->
 		<script>
 			var canvasWidth = 800,
 				canvasHeight = 800,
