almost there I think

--- a/index2.html
+++ b/index2.html
@@ -33,6 +33,8 @@
 		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
 		<script src="THREEx.CelShader.js"></script>
 		<script src="FileSaver.js"></script>
+		<script src="CanvasBox.js"></script>
+		<script src="Viewport.js"></script>
 		<script src="ZLathe.js"></script>
 		
 	</body>
