Removing wine glass

--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
 			jQuery(document).ready(function($) {
 
 				// Wine Glass
-				addPoint(0, 4.68);
-				addPoint(30.16, 9.36);
-				addPoint(49.4, 34.32);
-				addPoint(40.56, 99.32000000000001);
-				addPoint(47.32, 99.84);
-				addPoint(57.72, 33.28);
-				addPoint(33.28, 1.04);
-				addPoint(5.720000000000001, -9.36);
-				addPoint(4.16, -73.32000000000001);
-				addPoint(43.68, -85.28);
-				addPoint(0.52, -85.28);
+				// addPoint(0, 4.68);
+				// addPoint(30.16, 9.36);
+				// addPoint(49.4, 34.32);
+				// addPoint(40.56, 99.32000000000001);
+				// addPoint(47.32, 99.84);
+				// addPoint(57.72, 33.28);
+				// addPoint(33.28, 1.04);
+				// addPoint(5.720000000000001, -9.36);
+				// addPoint(4.16, -73.32000000000001);
+				// addPoint(43.68, -85.28);
+				// addPoint(0.52, -85.28);
 
 				// Preload our bump map texture
 				var texture = THREE.ImageUtils.loadTexture('texture.png', {}, function() {
@@ -191,7 +191,7 @@
 
 				});
 
-				$('#lathe').click();
+				// $('#lathe').click();
 
 				$('#exportstl').on('click', function(e) {
 					e.preventDefault();
