Added clear button

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 				right: 500px;
 			}
 
-			#lathe, #exportstl {	
+			#controls button {	
 				font-size: 30px;
 				font-weight: bold;
 				display: block;
+				width: 250px;
+				margin-bottom: 10px;
+				padding: 10px;
+
 			}
 		</style>
 	</head>
@@ -28,6 +32,7 @@
 		<div id="canvasContainer"></div>
 		<div id="controls">
 			<button id="lathe">Lathe!! &rarr;</button>
+			<button id="clear">Clear</button>
 			<button id="exportstl">Export to STL</button>
 		</div>
 
@@ -65,15 +70,15 @@
 			previewWindow.setSize( previewWidth, previewHeight );
 
 	        var light = new THREE.PointLight( 0xFFAAAA, 0.7 );
-	        light.position.y = 400;
+	        light.position.y = 20;
 	        light.position.z = 300;
-	        light.position.x = 100;
+	        light.position.x = 20;
 	        previewScene.add(light);
 
 	        var light2 = new THREE.PointLight( 0xAAAAFF, 0.7 );
-	        light2.position.y = -300;
+	        light2.position.y = -30;
 	        light2.position.z = 300;
-	        light2.position.x = -100;
+	        light2.position.x = -10;
 	        previewScene.add(light2);
 
 			document.getElementById('canvasContainer').appendChild( previewWindow.domElement ).setAttribute( 'id', 'previewWindow' );
@@ -130,17 +135,17 @@
 			jQuery(document).ready(function($) {
 
 				// Wine Glass
-				// addPoint(0, 4.68);
-				// addPoint(30.16, 9.36);
-				// addPoint(49.4, 34.32);
-				// addPoint(40.56, 99.32000000000001);
-				// addPoint(47.32, 99.84);
-				// addPoint(57.72, 33.28);
-				// addPoint(33.28, 1.04);
-				// addPoint(5.720000000000001, -9.36);
-				// addPoint(4.16, -73.32000000000001);
-				// addPoint(43.68, -85.28);
-				// addPoint(0.52, -85.28);
+				addPoint(0, 4.68);
+				addPoint(30.16, 9.36);
+				addPoint(49.4, 34.32);
+				addPoint(40.56, 99.32000000000001);
+				addPoint(47.32, 99.84);
+				addPoint(57.72, 33.28);
+				addPoint(33.28, 1.04);
+				addPoint(5.720000000000001, -9.36);
+				addPoint(4.16, -73.32000000000001);
+				addPoint(43.68, -85.28);
+				addPoint(0.52, -85.28);
 
 				// Preload our bump map texture
 				var texture = THREE.ImageUtils.loadTexture('texture.png', {}, function() {
@@ -176,9 +181,9 @@
 					var material = new THREE.MeshPhongMaterial({ 
 						color: new THREE.Color( 0x0000FF ),
 						shininess: 150,
-						opacity: 0.9,
+						opacity: 10,
 						bumpMap: texture,
-						bumpScale: 5
+						bumpScale: 3
 					});
 
 					previewMesh = new THREE.Mesh( 
@@ -191,19 +196,28 @@
 
 				});
 
-				// $('#lathe').click();
+				$('#lathe').click();
 
 				$('#exportstl').on('click', function(e) {
 					e.preventDefault();
-
 					$('#lathe').click();
-
 					if (!previewMesh) {
 						return;
 					}
-
 					saveSTL( previewMesh.geometry );
-					
+				});
+
+				$('#clear').on('click', function(e) {
+					e.preventDefault();
+					// Clone the array
+					var children = scene.children.slice(0);
+					$.each( children, function( i, child) {
+						// Remove everything but the dotted line
+						if ( i > 0 )
+							scene.remove( child );
+					});
+					pointArray = [];
+					renderer.render( scene, camera );
 				});
 
 
@@ -285,8 +299,6 @@
 				    stl += ("endfacet \n");
 				  }
 				  stl += ("endsolid");
-
-				  console.log(stl);
 				}
 
 				function saveSTL( geometry ){
